@@ -40,6 +40,7 @@ blueprint-not-available=A blueprint is not available for this crafter.
 click-to-get-blueprint=Click to get a blueprint.
 close-quick-reference=Close quick reference panel
 crafter=Crafter
+crafting-time=Crafting time:
 favorites=Favorites
 fluid=Fluid
 forward-to=Forward to __1__
