@@ -4,6 +4,11 @@ local gui = require("__flib__.gui")
 
 function recipe_page.build()
   return {
+    {type="frame", style="rb_crafting_time_frame", children={
+      {type="label", style="bold_label", caption={"rb-gui.crafting-time"}},
+      {template="pushers.horizontal"},
+      {type="label", save_as="recipe.crafting_time"}
+    }},
     gui.templates.info_list_box.build({"rb-gui.ingredients"}, 1, "recipe.ingredients"),
     gui.templates.info_list_box.build({"rb-gui.products"}, 1, "recipe.products"),
     gui.templates.info_list_box.build({"rb-gui.made-in"}, 1, "recipe.made_in"),
@@ -13,6 +18,8 @@ end
 
 function recipe_page.update(int_name, gui_data, player_data)
   local obj_data = global.recipe_book.recipe[int_name]
+
+  gui_data.recipe.crafting_time.caption = obj_data.energy.."s"
 
   local update_list_box = gui.templates.info_list_box.update
 
